home: Fix link color on Firefox

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -41,3 +41,9 @@ button.badge {
     border: none;
     cursor: pointer;
 }
+
+/* Required for Firefox */
+
+div.card-footer h5 {
+    color: #212529;
+}
